Completed discussion & introduction sections

--- a/outputs/paper/ref.bib
+++ b/outputs/paper/ref.bib
@@ -102,94 +102,21 @@
   url = {https://CRAN.R-project.org/package=here},
 },
   
-@Manual{fleishmanEffect,
-  title = {The Fleishman Effect In a city of Rachels and Libbys},
-  author = {Caitlin Moscatello},
-  year = {2023},
-  url = {https://www.thecut.com/2023/02/the-fleishman-is-in-trouble-effect.html},
+@article{levecque2017work,
+  title={Work organization and mental health problems in PhD students},
+  author={Levecque, Katia and Anseel, Frederik and De Beuckelaer, Alain and Van der Heyden, Johan and Gisle, Lydia},
+  journal={Research policy},
+  volume={46},
+  number={4},
+  pages={868--879},
+  year={2017},
+  publisher={Elsevier}
 },
 
-@Manual{generations,
-  title = {The Generations: Which Generation are You?},
-  author = {Michael T. Robinson},
-  url = {https://www.careerplanner.com/Career-Articles/Generations.cfm}
-},
-
-@Manual{gss,
-  title = {The General Social Survey},
-  author = {NORC},
-  year = {2021},
-  url = {https://gss.norc.org/}
-},
-
-@Manual{gssCodebook,
-  title = {22 GSS Cros-section Codebook},
-  author = {NORC},
-  year = {2021},
-  url = {https://gss.norc.org/Documents/codebook/GSS%202021%20Codebook.pdf}
-},
-
-@Manual{gssMethods,
-  title = {22 GSS Methodological Primer},
-  author = {NORC},
-  year = {2021},
-  url = {https://sda.berkeley.edu/sdaweb/docs/gss21/DOC/2021XSECR1MethodologicalPrimer.pdf}
-},
-
-@Manual{socialCapital,
-  title = {Social Capital and Economic Mobility},
-  author = {Raj Chetty, Matthew O. Jackson, Theresa Kuchler, Johannes Stroebel, Abigail Hiller, Sarah Oppenheimer, and the Opportunity Insights Team},
-  year = {2022},
-  journal = {Opportunity Insights},
-  url = {https://opportunityinsights.org/wp-content/uploads/2022/07/socialcapital_nontech.pdf}
-},
-
-@Manual{collegeMajors,
-  title = {The most-regretted (and lowest-paying) college majors},
-  author = {Andrew Van Dam},
-  year = {2022},
-  journal = {Washington Post},
-  url = {https://www.washingtonpost.com/business/2022/09/02/college-major-regrets/}
-},
-
-@article{talkAboutMoney,
-  title = {Why we need to talk about money},
-  author = {Otegha Uwagba},
-  year = {2019},
-  publisher = {Fourth Estate}
-},
-
-@article{samuelStouffer,
-  title = {Understanding the American Soldier: The SSRC and Social Science in World War II},
-  author = {Rodrigo Ugarte},
-  year = {2018},
-  url = {https://items.ssrc.org/insights/understanding-the-american-soldier-the-ssrc-and-social-science-in-world-war-ii/}
-},
-
-@Manual{relativeDeprivation,
-  title = {Short Note on Relative Deprivation and Deprivation Theory},
-  author = {Sociology Group},
-  url = {https://www.sociologygroup.com/relative-deprivation-and-deprivation-theory}
-},
-
-@misc{capitalone2020, 
-  title={Big-picture thinking leads to the right money mindset},
-  url={https://www.capitalone.com/about/newsroom/mind-over-money-survey/},
-  journal={Capital One},
-  author={Capital One},
-  year={2020}
-},
-
-@misc{statCan,
-  title = {Household economic well-being during the COVID-19 pandemic, experimental estimates, first quarter to third quarter of 2020},
-  year = {2021},
-  author = {Statistics Canada},
-  url = {https://www150.statcan.gc.ca/n1/daily-quotidien/210301/dq210301b-eng.htm}
-},
-
-@misc{cfpb,
-  title = {Data Spotlight: Financial well-being in America, from 2017 to 2020},
-  year = {2020},
-  author = {Consumer Financial Protection Bureau},
-  url = {https://www.consumerfinance.gov/consumer-tools/educator-tools/financial-well-being-resources/data-spotlight-financial-well-being-in-america-2017-2020/}
+@misc{worklifebalance,
+  title={PhD work-life balance – a challenging path},
+  author={Srija Balachandran},
+  publisher={AgRefine},
+  year={2021}
+  url={https://agrefine.eu/2021/11/02/phd-work-life-balance-a-challenging-path/}
 }
