first draft completed

--- a/outputs/paper/ref.bib
+++ b/outputs/paper/ref.bib
@@ -117,6 +117,6 @@
   title={PhD work-life balance – a challenging path},
   author={Srija Balachandran},
   publisher={AgRefine},
-  year={2021}
+  year={2021},
   url={https://agrefine.eu/2021/11/02/phd-work-life-balance-a-challenging-path/}
 }
